added new features

--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
   </div>
   <div id="jokes_display"></div>
 </body>
-<script src="./Script.js"></script>
+<script src="./script.js"></script>
 </html>
