--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
-    <p id="header">Page for all Dad Jokes lovers</p>
+    <p id="header">Page for all Dad Joke 😎 lovers</p>
   
 </head>
 
